# AIBoomi-ParkHero

./: AI_IMPACT_STATEMENT.md  AI_Impact_Statement.md  D58_Parking_Lots_with_Coordinates.xlsx  README.md  pune_parking_facilities.xlsx
backend/: .gitignore  API_DOCUMENTATION.md  README.md  attach_floorplans.py  export_facilities_map.py  facilities_map_data.json  main.py  manage.py  parking_map.html  parking_map_standalone.html  pyproject.toml  quickstart.sh  save_qr.py  setup_initial_data.py  test_empty_lot_flow.sh  test_p2p_flow.py  view_floorplans.sh  view_qr_base64.py
backend/apps/atlas/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/atlas/migrations/: 0001_initial.py  0002_alter_device_options_device_bound_facility_and_more.py  0003_alter_device_options_remove_device_bound_facility_and_more.py  0004_alter_device_options_device_bound_facility_and_more.py  0005_facility_daily_rate_facility_hourly_rate_and_more.py  0006_facility_latitute_facility_longitude.py  0007_update_facility_coordinates.py  0008_reapply_facility_coordinates.py
backend/apps/confidence/: apps.py  services.py
backend/apps/frontier_api/: apps.py  serializers.py  urls.py  views.py
backend/apps/lockbox/: apps.py  services.py  urls.py  views.py
backend/apps/orbit/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/orbit/migrations/: 0001_initial.py  (+1 more)
backend/common/: models.py  permissions.py  utils.py
backend/parkhero/: asgi.py  settings.py  urls.py  wsgi.py
docs/: API_DOCUMENTATION.md  DATABASE_SETUP.md  (+7 more)
(+65 files in other folders)
